tests/paczka1/fuzzy1/88747801.err
Error in line 2: kJQ1E9 S552 12,3
Error in line 10: ZdVUSp2 A307 71,9
Error in line 21: kJQ1E9 S552 7,0
Error in line 27: kJQ1E9 A652 46,4
Error in line 33: kJQ1E9 A614 3,5
Error in line 35: kJQ1E9 S552 1,7
